aggiunta pagina pizza

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tools Svizzeri</title>
     
     <!-- Link al file CSS -->
-    <link rel="stylesheet" href="style_main.css">
+    <link rel="stylesheet" href="style.css">
     
     <!-- Font da Google Fonts per un look pulito -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,12 +30,18 @@
                         <p>Calcola le dimensioni mantenendo le proporzioni.</p>
                     </a>
                 </li>
-
-                <!-- NUOVO LINK AGGIUNTO QUI -->
                 <li>
                     <a href="pneumatici.html" class="tool-link" target="_blank" rel="noopener noreferrer">
                         <h3>Calcolatrice Pneumatici</h3>
                         <p>Confronta le dimensioni e la circonferenza delle gomme.</p>
+                    </a>
+                </li>
+
+                <!-- NUOVO LINK AGGIUNTO QUI -->
+                <li>
+                    <a href="pizza.html" class="tool-link" target="_blank" rel="noopener noreferrer">
+                        <h3>Calcolatore Impasto Pizza</h3>
+                        <p>Calcolatore per le corrette quantità da utilizzare nel preparare l'impasto per pizza.</p>
                     </a>
                 </li>
                 <!-- FINE NUOVO LINK -->
