--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tools Svizzeri</title>
     
     <!-- Link al file CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_main.css">
     
     <!-- Font da Google Fonts per un look pulito -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
