--- a/pizza.html
+++ b/pizza.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcolatore Pizza - La Confraternita della Pizza</title>
+    <title>Calcolatore Pizza</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Il Calcolapizza 2.1</h1>
+            <h1>Il Calcolapizza</h1>
             <p class="subtitle">Calcolatore per le corrette quantità da utilizzare nel preparare l'impasto per pizza</p>
         </header>
 
@@ -135,7 +135,7 @@
         </div>
 
         <footer>
-            <p>Ringraziamo per il prezioso aiuto i membri del forum de La Confraternita della Pizza</p>
+            <p>Ringraziamo il forum Confraternita della Pizza da cui sono ricavate le formule</p>
         </footer>
     </div>
 
